clean repeating maven SWT config