@@ -53,27 +53,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<!-- macOS requires -XstartOnFirstThread for SWT Display creation. -->
-		<profile>
-			<id>mac</id>
-			<activation>
-				<os>
-					<family>mac</family>
-				</os>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>-XstartOnFirstThread --enable-native-access=ALL-UNNAMED</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
